@@ -3,12 +3,14 @@ package github.alittlehuang.sql4j.dsl.util;
 import java.math.BigDecimal;
 import java.sql.Time;
 import java.sql.Timestamp;
+import java.util.Arrays;
 import java.util.Date;
+import java.util.HashSet;
 import java.util.Set;
 
 public class BasicTypes {
 
-    private static final Set<Class<?>> BASIC_TYPES = Set.of(
+    private static final Set<Class<?>> BASIC_TYPES = new HashSet<>(Arrays.asList(
             Byte.class,
             Short.class,
             Integer.class,
@@ -30,7 +32,7 @@ public class BasicTypes {
             Long.TYPE,
             Float.TYPE,
             Double.TYPE
-    );
+    ));
 
     public static boolean isBasicType(Object value) {
         return BASIC_TYPES.contains(value.getClass());
